# dell_nfv_tempest

./: README.md  README.rst  setup.cfg
dell_nfv_tempest_plugin/: config.py  plugin.py
dell_nfv_tempest_plugin/tests/api/: .test_numa.py.swp  api.py  api_helper.py  base.py  create_numa_flavor.py  test_hpg_aggregate.py  test_numa.py  test_numa_aggregate.py  test_numa_flavor_creation.py  verify_numa_aggregate.py
