[metadata]
name = dell-nfv-tempest-plugin
version = 0.0.9
summary = Dell NFV Tempest plugin with NFV test case
description-file = README.rst
author = Nakul Shrivastava
author-email = nakul_shrivastava@dellteam.com
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack NFV
    Intended Audience :: OpenStack NFV Development Team
    Intended Audience :: OpenStack NFV QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    dell-nfv-tempest-plugin = dell_nfv_tempest_plugin.plugin:DellNFVTempestPlugin

[pbr]
warnerrors = true

